# adventofcode

./: .gitignore
2018/: 1.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  18.py  2.py  20.py  21.py  22.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py  advent.py
2019/1/: one.py
2019/10/: ten.py
2019/11/: eleven.py
2019/12/: twelve.py
2019/13/: thirteen.py
2019/14/: fourteen.py
2019/15/: fifteen.py
2019/16/: sixteen.py
2019/17/: seventeen.py
2019/2/: two.py
2019/3/: three.py
2019/4/: four.py
2019/5/: five.py
2019/6/: six.py
2019/7/: seven.py
2019/8/: eight.py
2019/9/: nine.py
2019/advent_of_code/: advent_of_code.py  int_code.py  setup.py
2020/1/: one.py
2020/10/: ten.py
2020/11/: eleven.py
2020/12/: twelve.py
2020/13/: thirteen.py
2020/14/: forteen.py
2020/15/: fifteen.py
2020/16/: sixteen.py
2020/17/: seventeen.py
2020/18/: eighteen.py
2020/19/: nineteen.py
2020/2/: two.py
2020/20/: twenty.py
2020/21/: twentyone.py
2020/22/: twentytwo.py
2020/23/: twentythree.py
2020/24/: twentyfour.py
2020/25/: twentyfive.py
2020/3/: three.py
2020/4/: four.py
2020/5/: five.py
2020/6/: six.py
2020/7/: seven.py
2020/8/: eight.py
2020/9/: nine.py
2020/advent_of_code/: advent_of_code.py
2021/1/: one.py
2021/10/: ten.py
2021/11/: eleven.py
2021/12/: twelve.py
2021/13/: thirteen.py
2021/14/: forteen.py
2021/15/: fifteen.py
2021/16/: sixteen.py
2021/17/: seventeen.py
2021/18/: eighteen.py
2021/19/: nineteen.py
2021/2/: two.py
2021/20/: twenty.py
2021/21/: twentyone.py
2021/22/: twentytwo.py
2021/23/: twentythree.py
2021/24/: twentyfour.py
2021/25/: twentyfive.py
2021/3/: three.py
2021/4/: four.py
2021/5/: five.py
2021/6/: six.py
2021/7/: seven.py
2021/8/: eight.py
2021/9/: nine.py
2021/advent_of_code/: advent_of_code.py
2022/1/: one.py
2022/10/: ten.py
2022/11/: eleven.py
2022/12/: twelve.py
2022/13/: thirteen.py
2022/14/: fourteen.py
2022/15/: fiveteen.py
2022/16/: sixteen.py
2022/17/: seventeen.py
2022/18/: eigthteen.py
2022/19/: nineteen.py
2022/2/: two.py
2022/20/: twenty.py
2022/21/: twentyone.py
2022/22/: twentytwo.py
2022/23/: twentythree.py
2022/24/: twentyfour.py
2022/25/: twentyfive.py
2022/3/: three.py
2022/4/: four.py
2022/5/: five.py
2022/6/: six.py
2022/7/: seven.py
2022/8/: eight.py
2022/9/: nine.py
2022/advent_of_code/: advent_of_code.py  setup.py
2023/1/: one.py
2023/10/: ten.py
2023/11/: eleven.py
2023/12/: twelve.py
2023/13/: thirteen.py
2023/14/: fourteen.py
2023/15/: fifteen.py
2023/16/: sixteen.py
2023/17/: seventeen.py
2023/18/: eighteen.py
2023/19/: nineteen.py
2023/2/: two.py
2023/20/: twenty.py
2023/21/: twentyone.py
2023/22/: twentytwo.py
2023/23/: twentythree.py
2023/24/: twentyfour.py
2023/25/: twentyfive.py
2023/3/: three.py
2023/4/: four.py
2023/5/: five.py
2023/6/: six.py
2023/7/: seven.py
2023/8/: eight.py
2023/9/: nine.py
2023/advent_of_code/: advent_of_code.py  pyproject.toml
2024/: pyproject.toml
2024/1/: one.py
2024/10/: ten.py
2024/11/: eleven.py
2024/12/: twelve.py
2024/13/: thirteen.py
2024/14/: fourteen.py
2024/15/: fifteen.py
2024/16/: sixteen.py
2024/17/: seventeen.py
2024/18/: eighteen.py
2024/19/: nineteen.py
2024/2/: two.py
2024/20/: twenty.py
2024/21/: twentyone.py
2024/22/: twentytwo.py
2024/23/: twentythree.py
2024/24/: twentyfour.py
2024/25/: twentyfive.py
2024/3/: three.py
2024/4/: four.py
2024/5/: five.py
2024/6/: six.py
2024/7/: seven.py
2024/8/: eight.py
2024/9/: nine.py
2024/advent_of_code/: __init__.py
2025/: pyproject.toml
2025/1/: one.py
2025/10/: ten.py
2025/11/: eleven.py
2025/12/: twelve.py
2025/2/: two.py
2025/3/: three.py
2025/4/: four.py
2025/5/: five.py
2025/6/: six.py
2025/7/: seven.py
2025/8/: eight.py
2025/9/: nine.py
2025/advent_of_code/: __init__.py
